--- a/sections/video_frame.liquid
+++ b/sections/video_frame.liquid
@@ -121,6 +121,25 @@
       right: 2.4em;
     }
   }
+  .__play__btn {
+      align-items: center;
+      /* background-color: #e5e5e5; */
+      background-color: transparent;
+      left: 50%;
+      display: flex;
+      height: 64px;
+      justify-content: center;
+      line-height: 1;
+      position: absolute;
+      top: 50%;
+      width: 64px;
+      z-index: 3;
+      transform: translate(-50%, -50%);
+      svg {
+        width: 64px;
+        height: 64px;
+      }
+  }      
   .wrapper-{{ id }} .content__info h4{
     margin: 0;
     text-transform: uppercase;
@@ -182,13 +201,65 @@
             </div>
           </div>
         </div>
+        <div class="__play__btn hidden">{% render 'all-icons', name: 'play-btn' %}</div>
         <div class="mute__btn ">{% render 'all-icons', name: 'mute_btn' %}</div>
       </div>
     </div>
   </div>
 </div>
 
+
 <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const videoFrame = document.querySelector('[data-video-frame]');
+      if (!videoFrame) return;
+      const vfVideos = videoFrame.querySelectorAll('video');
+      vfVideos.forEach((vfVideo) => {
+        vfVideo.muted = true;
+        vfVideo.volume = 1;
+      });
+      const muteBtns = videoFrame.querySelectorAll('.mute__btn');
+      const playBtns = videoFrame.querySelectorAll('.__play__btn');
+
+      function updatePlayButtonVisibility(video) {
+        if (video.paused) {
+          playBtns.forEach((playBtn) => {
+            playBtn.classList.remove("hidden");
+          });
+        } else {
+          playBtns.forEach((playBtn) => {
+            playBtn.classList.add("hidden");
+          });
+        }
+      }
+
+      videoFrame.addEventListener('click', (e) => {
+        videoFrame.classList.add('active');
+        muteBtns.forEach((mutedBtn) => {
+          mutedBtn.classList.add('hidden');
+        });
+        
+        vfVideos.forEach((vfVideo) => {
+          vfVideo.controls = true;
+          vfVideo.muted = false;
+          vfVideo.removeAttribute('muted');
+          vfVideo.volume = 1;
+          vfVideo.parentElement.classList.add('active');
+          
+          updatePlayButtonVisibility(vfVideo);
+          
+          vfVideo.addEventListener('play', () => {
+            updatePlayButtonVisibility(vfVideo);
+          });
+          
+          vfVideo.addEventListener('pause', () => {
+            updatePlayButtonVisibility(vfVideo);
+          });
+        });
+      });
+    });
+</script>
+{% comment %} <script>
   document.addEventListener('DOMContentLoaded', () => {
     const videoFrame = document.querySelector('[data-video-frame]');
     if (!videoFrame) return;
@@ -212,7 +283,7 @@
       });
     });
   });
-</script>
+</script> {% endcomment %}
 
 {% schema %}
 {
